--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+html {
     @apply bg-gray-900 text-gray-100;
     -webkit-font-smoothing: antialiased;
 }
+
+::-webkit-scrollbar { width: 0px; height: 0px; }
